--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,8 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+    .container
+      .header.clearfix
+      %p.notice= notice
+      %p.alert= alert
+      = yield
