--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,4 +2,7 @@
   %h1= t("project.name")
   %p.lead= t("project.slogan")
   %p.lead
-    = link_to "Sign Up now!", new_user_registration_path, class: "btn btn-success"
+    - if user_signed_in?
+      = link_to t("welcome.to_dashboard"), dashboard_path, class: "btn btn-success"
+    - else
+      = link_to t("welcome.sign_up_now"), new_user_registration_path, class: "btn btn-success"
