--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,12 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.row
+  .col-lg-4.offset-lg-4
+    %h1.text-lg-center= link_to t("project.short_name"), root_path
+
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      = f.input :email, label: false, placeholder: true
+      = f.input :password, autocomplete: "off", label: false, placeholder: true
+      = f.input :password_confirmation, autocomplete: "off", label: false, placeholder: true
+      .actions
+        = f.submit "Sign up", class: "btn btn-primary btn-block"
+    = render "devise/shared/links"
