--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,10 @@
   %body
     .container
       .header.clearfix
-      %p.notice= notice
-      %p.alert= alert
+
+      - if notice
+        %p.alert.alert-success= notice
+      - if alert
+        %p.alert.alert-danger= alert
+
       = yield
