--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,1 +1,3 @@
-%h1 Dashboard
+.jumbotron.spacing
+  %p.lead= t("dashboard.no_movies_yet")
+  %p.lead= link_to t("dashboard.add_movies_now"), "#", class: "btn btn-success"
