Add spacing at the top of the pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,10 +14,7 @@
     .container
       - if show_top_navbar?
         = render 'shared/top_navbar'
-      - else
-        .spacing
 
       = render 'shared/alerts'
-
-      .header.clearfix
+      .header.clearfix.spacing
       = yield
