--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,3 +1,3 @@
-.jumbotron.spacing
+.jumbotron
   %p.lead= t("dashboard.no_movies_yet")
   %p.lead= link_to t("dashboard.add_movies_now"), new_movie_path, class: "btn btn-success"
