--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -1,4 +1,5 @@
 %h1
   = @movie.title
+  = link_to t("movies.edit"), [:edit, @movie]
   = link_to t("movies.remove"), @movie, method: :delete, data: { confirm: t(:are_you_sure) }
 %p= @movie.description
