--- a/app/views/movies/_form.html.haml
+++ b/app/views/movies/_form.html.haml
@@ -1,10 +1,17 @@
 = simple_form_for movie, html: { class: 'form-horizontal', multipart: true }, wrapper: :horizontal_form do |f|
   = f.input :title
   = f.input :description, as: :text
+  - if movie.pictures.present?
+    .form-group.row
+      .col-lg-2
+        Pictures
+      .col-lg-10
+        - movie.pictures.each do |picture|
+          = image_tag picture.picture.thumb.url, class: "img-thumbnail"
   .form-group.row
-    .col-lg-8.offset-lg-2
+    .col-lg-10.offset-lg-2
       = file_field_tag "movie_pictures[]", accept: 'image/png,image/gif,image/jpeg', multiple: true, id: "movie_pictures"
   .form-group.row
-    .col-lg-8.offset-lg-2
+    .col-lg-10.offset-lg-2
       = f.submit class: "btn btn-primary"
       = link_to t(:cancel), cancel_link_path, class: "btn btn-link"
