--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,6 +1,13 @@
-%h1= t("movies.title_index")
+%h1.p-b-2= t("movies.title_index")
 
-#movies
-  - @movies.each do |movie|
-    .movie{id: movie.id}
-      = link_to movie.title, movie
+#movies.row
+  .col-lg-12
+    - @movies.each do |movie|
+      .row{id: movie.id}
+        .col-lg-2
+          - if movie.pictures.present?
+            = link_to image_tag(movie.pictures.first.picture.thumb.url, class: "img-thumbnail"), movie
+        .col-lg-10
+          %h3= movie.title
+          = render "action_buttons", movie: movie
+      %hr
