--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,4 +1,6 @@
-%h1.p-b-2= t("movies.title_index")
+%h1.p-b-2
+  = t("movies.title_index")
+  = link_to t("movies.add_more"), new_movie_path, class: "btn btn-sm btn-outline-success"
 
 #movies.row
   .col-lg-12
